apply plugin: 'java'

group 'kata'
version '1.0-SNAPSHOT'
sourceCompatibility = 8

repositories {
    mavenCentral()
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

dependencies {
    testCompile 'org.junit.jupiter:junit-jupiter:5.5.1'
    testCompile 'com.approvaltests:approvaltests:3.2.0'
}
